fixed spacing bug

--- a/Assests/style.css
+++ b/Assests/style.css
@@ -25,8 +25,9 @@ h3 {
   color: var(--primarty-color);
   font-size: 3vw;
   border-right: 4px solid var(--primarty-color);
-  padding-right: 7px;
-  margin-right: 5px;
+  /* padding-right: 7px;
+  margin-right: 5px; */
+  max-width: 217px;
 }
 
 .sidebar {
@@ -262,6 +263,7 @@ h4 {
     padding-right: 0px;
     width: 100vw;
     font-size: 5vw;
+    max-width: none;
   }
 
   .about-me,
@@ -269,6 +271,7 @@ h4 {
   .contact-me {
     flex-direction: column;
     align-items: flex-start;
+    justify-items: center;
   }
 
   header nav {
@@ -290,6 +293,10 @@ h4 {
     padding: 0px 0px;
     color: var(--secondary-color);
     border-bottom: none;
+  }
+
+  p {
+    text-align: center;
   }
 
   /* HERO MQ */
